public/stylesheets/style.css
body {
  padding: 4%;
  font-family: 'Quicksand', sans-serif;
  background: url(background2.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.page-header {
  margin-bottom: 80px;
}

a {
  color: #00B7FF;
  text-decoration: none !important;
}

a:hover {
  color: #e600e6;
  text-decoration: none !important;
}

h1 {
  color: #e600e6;
  font-size: 50px;
}

h1 a, h1 a:hover, h1 a:visited, h1 a:active {
  color: #e600e6;
}

.chordsContainer {
  margin-top: 10%;
}

.chordsTitle {
  font-size: 32px;
  color: hotpink;
  display: inline-block;
}


.chords {
  color: #ffffff;
  border: 2px solid white;
  display: inline-block;
  margin-left: 3%;
  padding: 2%;
  border-radius: 10px;
  cursor: pointer;
  width: 7%;
  vertical-align: middle;
  text-align: center;
  font-size: 26px;
}

div.chords:active {
    background-color: hotpink;
    }

.notesContainer {
  margin-top: 5%;
  margin-bottom: 15%;
}

.notesTitle {
  font-size: 32px;
  color: peachpuff;
  display: inline-block;
}

.notes {
  color: #ffffff;
  border: 2px solid white;
  display: inline-block;
  margin-left: 3%;
  padding: 2%;
  border-radius: 10px;
  cursor: pointer;
  width: 7%;
  vertical-align: middle;
  text-align: center;
  font-size: 26px;
}

div.notes:active {
    background-color: peachpuff;
    }

.sequenceForm {
  margin-top: 6%;
  width: 66%;
  height: 60px;
  text-align: center;
  margin-left: 20%;
}

.buttonDiv {
  text-align: center;
  margin-left: 6%;
}

.orangeBtn {
  background-color: #bfbfbf;
  color: black;
  margin-bottom: 4%;
  margin-top: 3%;
}

.orangeBtn:hover {
  background-color: #bfbfbf;
}

.orangeBtn:focus {
  background-color: #bfbfbf;
}

.btn-primary.active, .btn-primary:active, .btn-primary:hover, .btn-primary:visited,
.btn-primary:active:focus, .btn-primary:active:hover {
  background-color: #bfbfbf;
  border-color: #bfbfbf;
  margin-bottom: 4%;
  margin-top: 3%;
}


.whiteFont {
  color: white;
}

.dummySignup {
  float: right;
  margin-top: -5%;
}

.footie {
  /*position: fixed;*/
  margin-bottom: -10%;
  margin-top: 5%;
  right: 0%;
  left: 0%;
  /*text-align: center;*/
}

.authors {
  text-align: center;
}

.authors li {
  list-style-type: none;
  display: inline;
  color: white;
  margin-left: 2%;
}

.rwd-break {
  display: inline-block;
}

@media only screen and (max-width: 500px) {
    .notes {
        width: 12%;
        font-size: .6em;
        height: 30px;
    }
    .chords {
        width: 12%;
        font-size: .6em;
        height: 30px;
    }
    .rwd-break {
      display: block;
    }
}

.loggedIn {
  margin-top: 5%;
}

.error {
  color: red;
  font-size: 18px;
}

.has-error > input {
  border: 3px solid red;
}

.pointer{
  cursor: pointer;
}

#example{
  list-style: none;
}

.inputStuff {
  color: white;
}

